Fixed bug with navbar having too small height.

--- a/assets/css/mobile/navbar.css
+++ b/assets/css/mobile/navbar.css
@@ -1,7 +1,7 @@
 /* assuming that mobile viewport = 320px */
 #navbar {
 	width: 100%;
-	height: 50px;
+	height: 65px;
 	text-align: center;
 	padding: 10px 0 10px 0;
 	background-color: #111;
